--- a/backend/.env.example
+++ b/backend/.env.example
@@ -8,12 +8,12 @@ LOG_CHANNEL=stack
 LOG_DEPRECATIONS_CHANNEL=null
 LOG_LEVEL=debug
 
-DB_CONNECTION=mysql
-DB_HOST=mysql-db
-DB_PORT=3306
-DB_DATABASE=act-learning
-DB_USERNAME=root
-DB_PASSWORD=Group_161
+DB_CONNECTION=pgsql
+DB_HOST=db
+DB_PORT=5432
+DB_DATABASE=itcenter
+DB_USERNAME=itcenter
+DB_PASSWORD=password
 
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
@@ -32,11 +32,11 @@ MAIL_MAILER=smtp
 MAIL_HOST=smtp.gmail.com
 MAIL_DRIVER=smtp
 MAIL_PORT=587
-MAIL_USERNAME="khangntk09@gmail.com"
+MAIL_USERNAME="2001.sondv@gmail.com"
 MAIL_PASSWORD='ngadcvnjasrvhatu'
 MAIL_ENCRYPTION=tls
-MAIL_FROM_ADDRESS="khangntk09@gmail.com"
-MAIL_FROM_NAME="Group_161"
+MAIL_FROM_ADDRESS="2001.sondv@gmail.com"
+MAIL_FROM_NAME="it_center"
 
 AWS_ACCESS_KEY_ID=
 AWS_SECRET_ACCESS_KEY=
